--- a/common/public/404.html
+++ b/common/public/404.html
@@ -6,7 +6,7 @@
         <div class="normal-container">
             <article id="messageToast" class="message is-danger">
                 <div class="message-body" id="messageToastText">
-                    页面不存在或者文件已被删除
+                    404 error page
                 </div>
             </article>
         </div>
